# ksq_bot_aiogram

./: .env  .replit  main.py  pyproject.toml
utils/: commands.py
